--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </style>
 </head>
 <body>
-    <h1>MAKTAB</h1>
-    <h3><B>Masjid E Abubakr Siddique r.a.</B></h3>
+    <h1>MADARASA ROZATUL QURAAN</h1>
+    <h3><B>JAMA MASJID, KHARALWADI, PIMPRI, PUNE - 411018</B></h3>
     <h2>RESULT</h2>
     <h4>(1st Term - Shashmahi Result) </h4>
     <label for="pdfName">Roll Number:</label>
