--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <h3><B>JAMA MASJID, KHARALWADI, PIMPRI, PUNE - 411018</B></h3>
     <h2>RESULT</h2>
     <h4>(1st Term - Shashmahi Result) </h4>
-    <label for="pdfName">Roll Number:</label>
-    <input type="text" id="pdfName" placeholder="Talib ka Hajri Number">
+    <label for="pdfName">Name:</label>
+    <input type="text" id="pdfName" placeholder="Talib ka Naam">
     <button onclick="loadPDF()">Result Dekhen!</button>
     <div id="pdf-container"></div>
 
