--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             // Construct the PDF URL based on the entered name
             //var pdfURL = 'https://raw.githubusercontent.com/ROZATULQURAAN/result_old/master/' + pdfName;
-            var pdfURL = 'https://raw.githubusercontent.com/ROZATULQURAAN/result_old/master/' + ${encodeURIComponent(pdfName)}.pdf;
+            var pdfURL = 'https://raw.githubusercontent.com/ROZATULQURAAN/result_old/master/' + pdfName.pdf;
 
             
 
