--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             var pdfContainer = document.getElementById('pdfContainer');
 
             // Construct the PDF URL based on the entered name
-            //var pdfURL = 'https://raw.githubusercontent.com/ROZATULQURAAN/result_old/master/' + pdfName;
-            var pdfURL = 'https://raw.githubusercontent.com/ROZATULQURAAN/result_old/master/' + pdfName.pdf;
+            var pdfURL = 'https://raw.githubusercontent.com/ROZATULQURAAN/result_old/master/' + pdfName;
+            //var pdfURL = 'https://raw.githubusercontent.com/ROZATULQURAAN/result_old/master/' + pdfName.pdf;
 
             
 
